File Name: CHANGES

01/07/2013 FASP 1.1.7:
- Fix unmatch brackets in OMP version.
- Fix a bunch of bugs when using "long int" as INT-type in AMG and related.
- Still need to fix more problems when using "long int" as INT.

01/02/2013 FASP 1.1.6:
- Modify library dependence order in Makefile's. 
- Revise make.inc to include source compiling rules.
- Add i/o routines for binary file.
- Add a uniform i/o routine for ASCII and Binary file formats.
- Add precond_free to free up memory used by preconditioner.
- Update README and User Guide.

11/26/2012 FASP 1.1.5:
- Fix the SuperLU interface.
- Fix a bug in SA setup for OMP.
- Fix a problem in SCons for Windows. 
- Modify the documentation: add instructions on how to compile FASP on Windows.
- Revise the userguide.
- Modify VS08 debug setting.

10/25/2012 FASP 1.1.4:
- Fix an error in scons help.
- Fix a bug in OMP version of EM-AMG.
- Modify a few OMP functions.
- Modify comments in fasp_block.h.
- Add OMP version of P'AP for CSR matrices. 
- Fix a bug in OMP version of the Standard Interpolation.
- Add OMP version of fasp_blas_dcsr_rap_agg.
- Add OMP version of fasp_blas_dbsr_rap.

10/15/2012 FASP 1.1.3:
- Add scons support for shared library.
- Add scons support for OpenMP.
- Add scons help message.
- Update documentation.
- Fix a potential bug in Aggregation AMG.
- Change filename: fasp_gettime.c --> timing.c.
- Update VS08 solutions.
- Add distclean-like target to scons.

10/13/2012 FASP 1.1.2:
- Add matrix-free version of iterative methods.
- Add a test example for matrix-free format. 
- Some changes to OMP routines.
- Fix an OMP timing bug.
- Add OMP support for formats.c and amg_setup_sa.c.

09/22/2012 FASP 1.1.1:
- Add scons support for base/.
- Add red-black GS as a smoother for structured grids.
- Use single-file interprocedual optimization as default for Intel IPO; multi-file will generate very large lib files.
- Modify OMP version for smoothers.
- Format amg.c and tutorial/poisson-amg.c.