@@ -1,9 +1,11 @@
 File Name: CHANGES
 
-01/07/2013 FASP 1.1.7:
+01/08/2013 FASP 1.1.7:
 - Fix unmatch brackets in OMP version.
 - Fix a bunch of bugs when using "long int" as INT-type in AMG and related.
-- Still need to fix more problems when using "long int" as INT.
+- Fix a bunch of bugs in regression when using "long int". 
+- There is a bug in ILU when using "long int". 
+- There might be non-matching types in i/o when using "long int".
 
 01/02/2013 FASP 1.1.6:
 - Modify library dependence order in Makefile's. 
